--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-VITE_API_BASE_URL=https://server-kpm622r6h-parmarpratham333-gmailcoms-projects.vercel.app/
+VITE_API_BASE_URL=https://server-2ic5.onrender.com
